--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bwip-js": "^4.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "node-sass": "^9.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
